LoadProjects -> fixing bootstrap alignment

--- a/client/src/westbankstyle.css
+++ b/client/src/westbankstyle.css
@@ -189,7 +189,7 @@ a {
   width: 100%;
   height: 200px;
   padding-bottom: 15px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   font-weight: bold;
   background-size: cover;
 }
